--- a/static/whatis.html
+++ b/static/whatis.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Modern Business - Start Bootstrap Template</title>
+        <title>What causes homelessness?</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -51,23 +51,35 @@
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-6">
                             <div class="text-center mb-5">
-                                <h1 class="fw-bolder">Project Title</h1>
-                                <p class="lead fw-normal text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab similique, ducimus ut alias sit accusamus illum, asperiores deserunt dolorum quaerat qui! Ab, quisquam explicabo magni dolores unde beatae quam a.</p>
+                                <h1 class="fw-bolder">What causes homelessness?</h1>
+                                <br> </br>
+                                <h2 class="fw-bolder">When Housing is Out of Reach</h2>
+                                <p class="lead fw-normal text-muted mb-0">More than at any other time, there is a lack of housing that low income people can afford. Without housing options, people face eviction, instability and homelessness.</p>
+                                <br> </br>
+                                <h2 class="fw-bolder">Income and Housing Affordability</h2>
+                                <p class="lead fw-normal text-muted mb-0">Low income households often do not earn enough to pay for food, clothing, transportation and a place they can call home.</p>
+                                
                             </div>
                         </div>
                     </div>
                     <div class="row gx-5">
-                        <div class="col-12"><img class="img-fluid rounded-3 mb-5" src="https://dummyimage.com/1300x700/343a40/6c757d" alt="..." /></div>
-                        <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
-                        <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+                        <div class="col-12"><img class="img-fluid rounded-3 mb-5" src="../static/pics/bs-md-hud-homeless-funds-20190208.jpeg" alt="..." /></div>
+                        <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="../static/pics/GettyImages-1171867597.jpeg" alt="..." /></div>
+                        <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="../static/pics/Homeless-Baltimore_web.jpeg" alt="..." /></div>
                     </div>
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-6">
                             <div class="text-center mb-5">
-                                <p class="lead fw-normal text-muted">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam deserunt architecto enim eos accusantium fugit recusandae illo iste dignissimos possimus facere ducimus odit voluptatibus exercitationem, ex laudantium illum voluptatum corporis.</p>
-                                <a class="text-decoration-none" href="#!">
-                                    View project
-                                    <i class="bi-arrow-right"></i>
+                                <h2 class="fw-bolder">Connecting Homelessness and Health</h2>
+                                <p class="lead fw-normal text-muted mb-0">Health and homelessness are inextricably linked. Health problems can cause a person’s homelessness as well as be exacerbated by the experience. Housing is key to addressing the health needs of people experiencing homelessness.</p>
+                                <br> </br>
+                                <h2 class="fw-bolder">Escaping Violence</h2>
+                                <p class="lead fw-normal text-muted mb-0">Many survivors of domestic violence become homeless when leaving an abusive relationship.</p>
+                                <br> </br>
+                                <h2 class="fw-bolder">Impact of Racial Disparities</h2>
+                                <p class="lead fw-normal text-muted mb-0">Most minority groups in the United States experience homelessness at higher rates than Whites, and therefore make up a disproportionate share of the homeless population.</p>
+    
+                                    <i class="bi-arrow-right">View Data Visualizations</i>
                                 </a>
                             </div>
                         </div>
