What is , and who exoeriences

--- a/static/whatis.html
+++ b/static/whatis.html
@@ -28,7 +28,7 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Homelessness in Maryland</a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
-                                    <li><a class="dropdown-item" href="whatis.html">What is Homelessness</a></li>
+                                    <li><a class="dropdown-item" href="whatis.html">What causes Homelessness</a></li>
                                     <li><a class="dropdown-item" href="whoexperiences.html">Who experiences Homelessness</a></li>
                                 </ul>
                             </li>
@@ -78,8 +78,9 @@
                                 <br> </br>
                                 <h2 class="fw-bolder">Impact of Racial Disparities</h2>
                                 <p class="lead fw-normal text-muted mb-0">Most minority groups in the United States experience homelessness at higher rates than Whites, and therefore make up a disproportionate share of the homeless population.</p>
-    
-                                    <i class="bi-arrow-right">View Data Visualizations</i>
+                                
+                                View Data Visualizations
+                                    <i class="bi-arrow-right"></i>
                                 </a>
                             </div>
                         </div>
