--- a/static/whoexperiences.html
+++ b/static/whoexperiences.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Modern Business - Start Bootstrap Template</title>
+        <title>Who experiences homelessness?</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -28,7 +28,7 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Homelessness in Maryland</a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
-                                    <li><a class="dropdown-item" href="whatis.html">What is Homelessness</a></li>
+                                    <li><a class="dropdown-item" href="whatis.html">What causes Homelessness</a></li>
                                     <li><a class="dropdown-item" href="whoexperiences.html">Who experiences Homelessness</a></li>
                                 </ul>
                             </li>
@@ -51,22 +51,35 @@
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-6">
                             <div class="text-center mb-5">
-                                <h1 class="fw-bolder">Project Title</h1>
-                                <p class="lead fw-normal text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab similique, ducimus ut alias sit accusamus illum, asperiores deserunt dolorum quaerat qui! Ab, quisquam explicabo magni dolores unde beatae quam a.</p>
+                                <h1 class="fw-bolder">Who experiences Homelessness?</h1>
+                                <br> </br>
+                                <h2 class="fw-bolder">The Largest Population</h2>
+                                <p class="lead fw-normal text-muted mb-0">Most people who experience homelessness are single adults.</p>
+                                <br> </br>
+                                <h2 class="fw-bolder">Every Child Deserves a Home</h2>
+                                <p class="lead fw-normal text-muted mb-0">Homelessness is devastating, regardless of age. But for children, in particular, it can have serious physical, emotional and psychological implications.</p>
+                                
                             </div>
                         </div>
                     </div>
                     <div class="row gx-5">
-                        <div class="col-12"><img class="img-fluid rounded-3 mb-5" src="https://dummyimage.com/1300x700/343a40/6c757d" alt="..." /></div>
-                        <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
-                        <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+                        <div class="col-12"><img class="img-fluid rounded-3 mb-5" src="../static/pics/bs-md-hud-homeless-funds-20190208.jpeg" alt="..." /></div>
+                        <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="../static/pics/GettyImages-1171867597.jpeg" alt="..." /></div>
+                        <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="../static/pics/Homeless-Baltimore_web.jpeg" alt="..." /></div>
                     </div>
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-6">
                             <div class="text-center mb-5">
-                                <p class="lead fw-normal text-muted">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam deserunt architecto enim eos accusantium fugit recusandae illo iste dignissimos possimus facere ducimus odit voluptatibus exercitationem, ex laudantium illum voluptatum corporis.</p>
-                                <a class="text-decoration-none" href="#!">
-                                    View project
+                                <h2 class="fw-bolder">Connecting Homelessness and Health</h2>
+                                <p class="lead fw-normal text-muted mb-0">Health and homelessness are inextricably linked. Health problems can cause a person’s homelessness as well as be exacerbated by the experience. Housing is key to addressing the health needs of people experiencing homelessness.</p>
+                                <br> </br>
+                                <h2 class="fw-bolder">Escaping Violence</h2>
+                                <p class="lead fw-normal text-muted mb-0">Many survivors of domestic violence become homeless when leaving an abusive relationship.</p>
+                                <br> </br>
+                                <h2 class="fw-bolder">Impact of Racial Disparities</h2>
+                                <p class="lead fw-normal text-muted mb-0">Most minority groups in the United States experience homelessness at higher rates than Whites, and therefore make up a disproportionate share of the homeless population.</p>
+                                
+                                View Data Visualizations
                                     <i class="bi-arrow-right"></i>
                                 </a>
                             </div>
