--- a/static/whoexperiences.html
+++ b/static/whoexperiences.html
@@ -63,21 +63,21 @@
                         </div>
                     </div>
                     <div class="row gx-5">
-                        <div class="col-12"><img class="img-fluid rounded-3 mb-5" src="../static/pics/bs-md-hud-homeless-funds-20190208.jpeg" alt="..." /></div>
-                        <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="../static/pics/GettyImages-1171867597.jpeg" alt="..." /></div>
-                        <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="../static/pics/Homeless-Baltimore_web.jpeg" alt="..." /></div>
+                        <div class="col-12"><img class="img-fluid rounded-3 mb-5" src="../static/pics/veterans.jpeg" alt="..." /></div>
+                        <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="../static/pics/seekingkindness.jpeg" alt="..." /></div>
+                        <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="../static/pics/child.jpeg" alt="..." /></div>
                     </div>
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-6">
                             <div class="text-center mb-5">
-                                <h2 class="fw-bolder">Connecting Homelessness and Health</h2>
-                                <p class="lead fw-normal text-muted mb-0">Health and homelessness are inextricably linked. Health problems can cause a person’s homelessness as well as be exacerbated by the experience. Housing is key to addressing the health needs of people experiencing homelessness.</p>
+                                <h2 class="fw-bolder">Our Veterans</h2>
+                                <p class="lead fw-normal text-muted mb-0">Our nation’s veterans may face invisible wounds of war that may make them more vulnerable to homelessness.</p>
                                 <br> </br>
-                                <h2 class="fw-bolder">Escaping Violence</h2>
-                                <p class="lead fw-normal text-muted mb-0">Many survivors of domestic violence become homeless when leaving an abusive relationship.</p>
+                                <h2 class="fw-bolder">The Most Vulnerable</h2>
+                                <p class="lead fw-normal text-muted mb-0">Physical and mental health conditions can be both the cause, and a result, of homelessness. For some, these health challenges can mean years or decades on the streets and in shelters.</p>
                                 <br> </br>
-                                <h2 class="fw-bolder">Impact of Racial Disparities</h2>
-                                <p class="lead fw-normal text-muted mb-0">Most minority groups in the United States experience homelessness at higher rates than Whites, and therefore make up a disproportionate share of the homeless population.</p>
+                                <h2 class="fw-bolder">Young and Homeless</h2>
+                                <p class="lead fw-normal text-muted mb-0">Each night, thousands of young people living on their own go to sleep without the safety, stability and support of a family or a home.</p>
                                 
                                 View Data Visualizations
                                     <i class="bi-arrow-right"></i>
