--- a/static/contact.html
+++ b/static/contact.html
@@ -28,7 +28,7 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Homelessness in Maryland</a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
-                                    <li><a class="dropdown-item" href="whatis.html">What is Homelessness</a></li>
+                                    <li><a class="dropdown-item" href="whatis.html">What causes Homelessness</a></li>
                                     <li><a class="dropdown-item" href="whoexperiences.html">Who experiences Homelessness</a></li>
                                 </ul>
                             </li>
