--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Modern Business - Start Bootstrap Template</title>
+        <title>Preventing and Ending Homelessness in Maryland.</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -54,7 +54,6 @@
                                 <h1 class="display-5 fw-bolder text-white mb-2">Preventing and Ending Homelessness in Maryland.</h1>
                                 <p class="lead fw-normal text-white-50 mb-4">Educating the masses, in hopes of a better future.</p>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                                    <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a>
                                     <a class="btn btn-outline-light btn-lg px-4" href="whatis.html">Learn More</a>
                                 </div>
                             </div>
