--- a/static/about.html
+++ b/static/about.html
@@ -83,6 +83,9 @@
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="../static/pics/portialinkedin.jpeg" alt="..." />
                                 <h5 class="fw-bolder">Portia Anyamba</h5>
                                 <div class="fst-italic text-muted">Founder</div>
+                                <a href="https://www.linkedin.com/in/portia-a-7a9560a6/">
+                                    <img class="social-icon" src="../static/pics/linkedin.png">
+                                </a>
                             </div>
                         </div>
                         <div class="col mb-5 mb-5 mb-xl-0">
@@ -90,6 +93,9 @@
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="../static/pics/ariellinkedin.jpeg" alt="..." />
                                 <h5 class="fw-bolder">Ariel Dunn</h5>
                                 <div class="fst-italic text-muted">Founder</div>
+                                <a href="https://www.linkedin.com/in/arielnrdunn/">
+                                    <img class="social-icon" src="../static/pics/linkedin.png">
+                                </a>
                             </div>
                         </div>
                         <div class="col mb-5 mb-5 mb-sm-0">
@@ -97,6 +103,9 @@
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
                                 <h5 class="fw-bolder">Swapna Kasturi</h5>
                                 <div class="fst-italic text-muted">Founder</div>
+                                <a href="https://www.linkedin.com/in/swapna-kasturi-136537a6/">
+                                    <img class="social-icon" src="../static/pics/linkedin.png">
+                                </a>
                             </div>
                         </div>
                         </div>
