--- a/static/faq.html
+++ b/static/faq.html
@@ -37,7 +37,8 @@
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
                                     <li><a class="dropdown-item" href="poverty.html">Poverty, Unemployment, & Income</a></li>
                                     <li><a class="dropdown-item" href="race.html">Impact of Race and Age</a></li>
-                                    <li><a class="dropdown-item" href="counties.html">Counties & Baltimore City</a></li>
+                                    <li><a class="dropdown-item" href="counties.html">All Counties</a></li>
+                                    <li><a class="dropdown-item" href="baltimore.html">Baltimore City</a></li>
                                 </ul>
                             </li>
                         </ul>
