--- a/static/prediction.html
+++ b/static/prediction.html
@@ -50,8 +50,7 @@
             <!-- Page Content-->
 
             <div class="text-center mb-5">
-                <h1 class="fw-bolder">As of January 2020, Maryland had an estimated 6,360 experiencing homelessness on any given day, as reported by Continuums of Care to the U.S. Department of Housing and Urban Development (HUD).</h1>
-                <p class="lead fw-normal text-muted mb-0">Using the Random Forest Prediction model, we estimate that there will be around 6,672 people experiencing homelessness in 2022.</p>
+                <h1 class="fw-bolder">Using the Random Forest Prediction model, we estimate that there will be around 6,672 people experiencing homelessness in 2022.</h1>
             </div>
 
             <div class="row gx-5">
